# meadows-cpp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AppKit.hpp.220C13FFCCA8B189.idx  AppKit.hpp.95A9F3F11E74CDA4.idx  AppKitPrivate.hpp.57604495502DD2E2.idx  AppKitPrivate.hpp.FA1DFEFAA0EC46A0.idx  CADefines.hpp.2D9B7442792190A4.idx  CADefines.hpp.9D7937AACEF21E80.idx  CAMetalDrawable.hpp.617C3679E109DD37.idx  CAMetalDrawable.hpp.E6CDF4DBC24239BC.idx  CAMetalLayer.hpp.93369B417E7D2161.idx  CAMetalLayer.hpp.F1F8158F1BA87DF3.idx  CAPrivate.hpp.9568FB474AEEA8FF.idx  CAPrivate.hpp.CA525F849178A3CC.idx  Foundation.hpp.4DBB9A58A65A0742.idx  Foundation.hpp.5DD7BF15E38BC670.idx  MTKView.hpp.20493520B7E28F9A.idx  MTKView.hpp.367E075B263A53CE.idx  MTLAccelerationStructure.hpp.82898D6E39AB350F.idx  MTLAccelerationStructure.hpp.92FCE4864321099B.idx  MTLAccelerationStructureCommandEncoder.hpp.6E7F9ACBD03D8522.idx  MTLAccelerationStructureCommandEncoder.hpp.B471707AA4FFED30.idx  MTLAccelerationStructureTypes.hpp.9DFF383E42DC6943.idx  MTLAccelerationStructureTypes.hpp.D00D6796D74A713C.idx  MTLArgument.hpp.3EBAF36FED9C8344.idx  MTLArgument.hpp.EAC2261D66875240.idx  MTLArgumentEncoder.hpp.025EB83443581E66.idx  MTLArgumentEncoder.hpp.5324976469DC59AE.idx  MTLBinaryArchive.hpp.31B82171FE19E258.idx  MTLBinaryArchive.hpp.655A09E9250C93B5.idx  MTLBlitCommandEncoder.hpp.7551CC24B92DFF6D.idx  MTLBlitCommandEncoder.hpp.FA237E451B7ECD84.idx  MTLBlitPass.hpp.394C94D2C98832FE.idx  MTLBlitPass.hpp.E2CE18D921F02733.idx  MTLBuffer.hpp.D3012224C46F328C.idx  MTLBuffer.hpp.EB8AF6D9D33D8C56.idx  MTLCaptureManager.hpp.C48AC1AB4113A6F7.idx  MTLCaptureManager.hpp.C4DAA340C6EBBE12.idx  MTLCaptureScope.hpp.5D5FF569E64B2B9A.idx  MTLCaptureScope.hpp.D6C899422A792908.idx  MTLCommandBuffer.hpp.43353D51D38E62FF.idx  MTLCommandBuffer.hpp.5766698A10BEC4ED.idx  (+198 more)
CMakeScripts/: ReRunCMake.make
include/compute/: cpu_computer.hpp  mtl_computer.hpp
include/core/: app.hpp  config.hpp
include/render/: glfw_adapter.h  renderer.hpp
lib/: app_delegate.hpp  benchmarking.hpp  config.hpp  glfw_adapter.h  mtl_computer.hpp  renderer.hpp  simulator.hpp  view_delegate.hpp
metal-cmake/: CMakeLists.txt
metal-cmake/metal-cpp/SingleHeader/: Metal.hpp
shaders/: CMakeLists.txt  compute.metal  fdtd.metal  shader.metal
src/: CMakeLists.txt  app.cpp  app_delegate.cpp  benchmarking.cpp  glfw_adapter.mm  main.cpp  mtl_computer.cpp  renderer.cpp  simulator.cpp  view_delegate.cpp
src/compute/: CMakeLists.txt  cpu_computer.cpp  mtl_computer.cpp
src/core/: CMakeLists.txt
src/render/: CMakeLists.txt  renderer.cpp
src/solvers/: CMakeLists.txt
